# giro_insights

./: .gitignore  README.md  app.py  main.py  pyproject.toml
data/transformed/: portfolio.parquet
notebooks/: test.ipynb  yfinance.ipynb
src/constants/: config.py  isin_tickers.json  tickers.py
src/data_load/: degiro.py  degiro_account.py  degiro_transactions.py  fx_rates.py  load_degiro.py  load_fx.py  load_rates.py  stock_rates.py  utils.py
src/data_transform/: build_portfolio.py  portfolio.py
