[project]
name = "stocks"
version = "0.1.0"
description = ""
authors = [
    {name = "Maarten"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "yfinance (>=0.2.52,<0.3.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "ruff (>=0.14.0,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
